# farm_stack_project

./: .gitignore  README.md  pyproject.toml
backend/: database.py  main.py  model.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/components/: Todo.js  TodoListView.js
