[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "António Lopes",email = "faithmakerneo@gmail.com" },
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.65.1",
    "motor==2.4.0",
    "uvicorn==0.14.0",
]
